@@ -14,7 +14,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.representations.idm.CredentialRepresentation;
-import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.CacheEvict;
@@ -32,6 +31,9 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class DefaultUserService implements UserService {
+    private static final String KEYCLOAK_ADMIN_ROLE = "ROLE_ADMIN";
+    private static final String LOCAL_ADMIN_ROLE = "ADMIN";
+    private static final String LOCAL_USER_ROLE = "USER";
 
     private final Keycloak keycloak;
     private final UserRepository userRepository;
@@ -58,7 +60,7 @@ public class DefaultUserService implements UserService {
 
                 if (usernameExists) {
                     throw new FieldAlreadyExistsException("username", newUserDto.username(),
-                            "Пользователь с именем '%s' уже существует".formatted(newUserDto.username()));
+                            "Пользователь с логином '%s' уже существует".formatted(newUserDto.username()));
                 }
 
                 if (emailExists) {
@@ -67,7 +69,7 @@ public class DefaultUserService implements UserService {
                 }
 
                 throw new FieldAlreadyExistsException("usernameOrEmail",
-                        "Пользователь с таким именем или email уже существует");
+                        "Пользователь с таким логином или email уже существует");
             }
 
             if (response.getStatus() != 201) {
@@ -88,8 +90,9 @@ public class DefaultUserService implements UserService {
         }
 
         try {
-            Role defaultRole = roleRepository.findByRole("USER")
+            Role defaultRole = roleRepository.findByRole(LOCAL_USER_ROLE)
                     .orElseThrow(() -> new EntityNotFoundException("Role 'USER' not found"));
+            Set<Role> userRoles = Set.of(defaultRole);
 
             User localUser = new User(
                     UUID.fromString(keycloakUserId),
@@ -97,7 +100,7 @@ public class DefaultUserService implements UserService {
                     newUserDto.email(),
                     newUserDto.gender(),
                     newUserDto.birthDate(),
-                    Set.of(defaultRole),
+                    userRoles,
                     userAvatarFileName
             );
 
@@ -106,7 +109,7 @@ public class DefaultUserService implements UserService {
             return new UserCreatedDto(savedUser.getId(), savedUser.getUsername());
 
         } catch (Exception e) {
-            log.error("Failed to save user in local DB. Rolling back Keycloak user {}", keycloakUserId, e);
+            log.error("Failed to save user or assign roles. Rolling back Keycloak user {}", keycloakUserId, e);
             try {
                 usersResource.get(keycloakUserId).remove();
             } catch (Exception ex) {
@@ -123,22 +126,6 @@ public class DefaultUserService implements UserService {
 
             throw e;
         }
-    }
-
-    private UserRepresentation getUserRepresentation(NewUserDto newUserDto) {
-        CredentialRepresentation credential = new CredentialRepresentation();
-        credential.setType(CredentialRepresentation.PASSWORD);
-        credential.setValue(newUserDto.password());
-        credential.setTemporary(false);
-
-        UserRepresentation user = new UserRepresentation();
-        user.setFirstName(newUserDto.firstName());
-        user.setLastName(newUserDto.lastName());
-        user.setUsername(newUserDto.username());
-        user.setEmail(newUserDto.email());
-        user.setEnabled(true);
-        user.setCredentials(Collections.singletonList(credential));
-        return user;
     }
 
     @Override
@@ -256,42 +243,21 @@ public class DefaultUserService implements UserService {
         );
     }
 
-    @Override
-    @Transactional
-    @CacheEvict(value = "private_user_info", key = "#currentUserId")
-    public void getAdminRole(UUID currentUserId) {
-        User user = userRepository.findById(currentUserId)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id %s".formatted(currentUserId)));
 
-        boolean hasAdminRole = user.getRoles().stream()
-                .anyMatch(r -> "ADMIN".equals(r.getRole()));
+    private UserRepresentation getUserRepresentation(NewUserDto newUserDto) {
+        CredentialRepresentation credential = new CredentialRepresentation();
+        credential.setType(CredentialRepresentation.PASSWORD);
+        credential.setValue(newUserDto.password());
+        credential.setTemporary(false);
 
-        if (hasAdminRole) {
-            return;
-        }
-
-        Role role = roleRepository.findByRole("ADMIN")
-                .orElseThrow(() -> new EntityNotFoundException("Role 'ADMIN' not found"));
-
-        user.addRole(role);
-
-        try {
-            RoleRepresentation roleAdmin = keycloak.realm(realm)
-                    .roles()
-                    .get("ROLE_ADMIN")
-                    .toRepresentation();
-
-            keycloak.realm(realm)
-                    .users()
-                    .get(currentUserId.toString())
-                    .roles()
-                    .realmLevel()
-                    .add(List.of(roleAdmin));
-
-        } catch (Exception e) {
-            log.error("Failed to assign Keycloak role ADMIN for user {}", currentUserId, e);
-            throw new RuntimeException("Failed to assign ADMIN role in Keycloak", e);
-        }
+        UserRepresentation user = new UserRepresentation();
+        user.setFirstName(newUserDto.firstName());
+        user.setLastName(newUserDto.lastName());
+        user.setUsername(newUserDto.username());
+        user.setEmail(newUserDto.email());
+        user.setEnabled(true);
+        user.setCredentials(Collections.singletonList(credential));
+        return user;
     }
 
     private void updateKeycloakUser(String keycloakUserId, UpdateUserDto updateUserDto) {
